--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -9,6 +9,8 @@ dependencies:
     - plotly=2.2.2
     - ipython=6.2.1
     - seaborn=0.8
+    - snakemake
+    - docutils
     - pip
     - pip:
       - cufflinks==0.12.1
