--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -138,10 +138,13 @@ if config.get("workflow", "complete") == "qc":
     MULTIFILE_FRACTIONS = ['R1', 'R2', 'se'] if PAIRED_END else ['se']
     RAW_INPUT_FRACTIONS = ['R1', 'R2'] if PAIRED_END else ['se']
 
+    REPORTS= ["reports/QC_report.html"]
+
     rule all:
         input:
             expand("{sample}/sequence_quality_control/finished_QC",sample=SAMPLES),
-            "finished_QC"
+            "finished_QC",
+            REPORTS
 
     include: "rules/qc.snakefile"
 
@@ -153,16 +156,23 @@ elif config.get("workflow", "complete") == "complete":
     MULTIFILE_FRACTIONS = ['R1', 'R2', 'se'] if PAIRED_END else ['se']
     RAW_INPUT_FRACTIONS = ['R1', 'R2'] if PAIRED_END else ['se']
 
+    # REPORTS = ["reports/QC_report.html", "reports/assembly_report.html"]
+    REPORTS = ["reports/assembly_report.html"]
+
+    if config.get("perform_genome_binning", True):
+        REPORTS.append("reports/bin_report.html")
+
     rule all:
         input:
-            expand("{sample}/sequence_quality_control/finished_QC",sample=SAMPLES),
-            "finished_QC",
+            expand("{sample}/sequence_quality_control/finished_QC",
+                sample=SAMPLES),
+            # "finished_QC",
             expand("{sample}/assembly/contig_stats/prefilter_contig_stats.txt",
                 sample=SAMPLES),
             expand("{sample}/assembly/contig_stats/final_contig_stats.txt",
                 sample=SAMPLES),
-#            get_bin_summary_files(config.get("perform_genome_binning", True), SAMPLES),  # this produces an error when genome binning is not active
-            expand("{sample}/{sample}_annotations.txt", sample=SAMPLES)
+            expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
+            REPORTS
 
     include: "rules/assemble.snakefile"
     include: "rules/qc.snakefile"
@@ -191,7 +201,8 @@ elif config.get("workflow") == "annotate":
     rule all:
         input:
             expand("{sample}_annotations.txt", sample=SAMPLES),
-            expand("{sample}/contig_stats.txt", sample=SAMPLES)
+            expand("{sample}/contig_stats.txt", sample=SAMPLES),
+            #"reports/assembly_report.html" # not tested yet, but should work
 
     include: "rules/annotate.snakefile"
 
