--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,3 +10,5 @@ include atlas/envs/report.yaml
 include atlas/template_config.yaml
 include atlas/report/qc_report.py
 include atlas/report/report.css
+include atlas/report/assembly_report.py
+include atlas/report/bin_report.py
