--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -60,12 +60,17 @@ contaminant_ambiguous: best
 ########################
 # Pre-assembly-processing
 ########################
+
+normalize_reads_before_assembly : true
 # target kmer depth
-normalization_target_depth: 100
+normalization_target_depth: 10000
 normalization_kmer_length: 21
-normalization_minimum_kmers: 15
+normalization_minimum_kmers: 3
+
+error_correction_before_assembly : true
+
 # join R1 and R2 at overlap; unjoined reads are still utilized
-merge_pairs_before_assembly: true
+merge_pairs_before_assembly : true
 # extend reads while merging to this many nucleotides
 merging_extend2: 40
 # Iterations are performed until extend2 x iterations
@@ -94,20 +99,23 @@ megahit_preset: default
 
 # Spades
 #------------
+spades_skip_BayesHammer: False
 spades_k: auto
 
 # Filtering
 #------------
-# trim contig tips
-contig_trim_bp: 20
-# filter out assembled noise
 prefilter_minimum_contig_length: 200
+# filter out assembled noise
+# this is more important for assemblys from megahit
+filter_contigs: true
+# trim contig tips
+contig_trim_bp: 0
 # require contigs to have read support
 minimum_average_coverage: 1
-minimum_percent_covered_bases: 40
+minimum_percent_covered_bases: 20
 minimum_mapped_reads: 0
 # after filtering
-minimum_contig_length: 200
+minimum_contig_length: 300
 
 
 ########################
