--- a/atlas/envs/eggNOG.yaml
+++ b/atlas/envs/eggNOG.yaml
@@ -6,4 +6,4 @@ channels:
 dependencies:
     - eggnog-mapper=1.0.3
     - python=2
-    - wget # to download_eggnog_data
+    - wget # to download_eggnog_data on macOS
