--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include atlas/rules/download.snakefile
 include atlas/rules/gene_annotation.snakefile
 include atlas/rules/initialize_checkm.py
 include atlas/rules/qc.snakefile
+include atlas/rules/binning.snakefile
 include atlas/envs/optional_genome_binning.yaml
 include atlas/envs/required_packages.yaml
 include atlas/envs/report.yaml
