--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -143,19 +143,25 @@ feature_counts_allow_overlap: true
 # Binning
 ########################
 binner: ['metabat','concoct','maxbin']
-binning_min_contig_length: 1500 # metabat needs >1500
+
 metabat:
   sensitivity: sensitive
+  min_contig_length: 1500 # metabat needs >1500
 
 concoct:
-  Nexpected_clusters: 200
-  read_length: 100
+  Nexpected_clusters: 200           # important parameter
+  read_length: 100                  # change this parameter !
   Niterations: 500
+  min_contig_length: 1000
 
 maxbin:
   max_iteration: 50
   prob_threshold: 0.9
+  min_contig_length: 1000
 
+DASTool:
+  search_engine: 'diamond'
+  score_threshold: 0.5              #Score threshold until selection algorithm will keep selecting bins [0..1].
 
 ########################
 # Annotation
