--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -160,6 +160,7 @@ elif config.get("workflow", "complete") == "complete":
         # expand("{sample}/binning/{binner}/cluster_attribution.tsv",
         #        binner=config['binner'], sample =SAMPLES)
         include: "rules/binning.snakefile"
+        ruleorder: align_reads_to_prefilter_contigs > bam_2_sam > align_reads_to_final_contigs
 
     localrules: all
     rule all:
@@ -174,9 +175,22 @@ elif config.get("workflow", "complete") == "complete":
             expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
             REPORTS
 
+# checkpoint finished contigs, no annotation
+
+    rule finish_assembly:
+        input:
+            expand("{sample}/sequence_quality_control/finished_QC",
+                sample=SAMPLES),
+            expand("{sample}/{sample}_contigs.fasta",
+                sample=SAMPLES),
+            expand("{sample}/sequence_alignment/{sample}.bam",
+                sample=SAMPLES),
+            expand("{sample}/assembly/contig_stats/postfilter_coverage_stats.txt", sample=SAMPLES),
+
     include: "rules/assemble.snakefile"
     include: "rules/qc.snakefile"
     include: "rules/gene_annotation.snakefile"
+
 
     if config.get("perform_genome_binning", True):
 
