--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -25,8 +25,6 @@ assembly_threads: 8
 assembly_memory: 50
 # Local directory for temp files, useful for cluster execution without shared file system
 tmpdir: /tmp
-# database dir. You can download the necessary databases with atlas download
-db_dir: databases
 
 ########################
 # Quality control
@@ -202,6 +200,8 @@ diamond_gap_open: 11
 diamond_gap_extend: 1
 diamond_block_size: 2
 diamond_index_chunks: 4
+
+eggnogg_dir: /path/to/databases
 
 # LCA taxonomic annotation
 #--------------------------
