--- a/atlas/envs/cd-hit.yaml
+++ b/atlas/envs/cd-hit.yaml
@@ -4,7 +4,7 @@ channels:
 - bioconda
 - conda-forge
 dependencies:
-- cd-hit=4.6.8=0
-- libgcc=7.2.0=h69d50b8_2
-- libgcc-ng=7.2.0=h7cc24e2_2
-- libstdcxx-ng=7.2.0=h7a57d05_2
+- cd-hit=4.6.8
+# - libgcc=7.2.0=h69d50b8_2
+# - libgcc-ng=7.2.0=h7cc24e2_2
+# - libstdcxx-ng=7.2.0=h7a57d05_2
