--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -187,7 +187,7 @@ elif config.get("workflow", "complete") == "complete":
                 sample=SAMPLES),
             expand("{sample}/finished_assembly", sample=SAMPLES),
             REPORTS,
-            expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
+            #expand("{sample}/{sample}_annotations.txt", sample=SAMPLES),
 
 # checkpoint finished contigs, no annotation
     localrules: finish_assembly
